load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = ["solution.go"],
    importpath = "algo/leetcode/arrays/two_sum/go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "run",
    embed = [":lib"],
)

go_test(
    name = "test",
    srcs = ["solution_test.go"],
    embed = [":lib"],
)

